--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-Flask
-Flask-Cors 
-psycopg2-binary 
-python-dotenv
-google-api-python-client
-google-auth-httplib2
-google-auth-oauthlib
-pandas
-gspread
-openpyxl
+Flask==2.3.3
+Flask-CORS==4.0.0
+psycopg2-binary==2.9.7
+pandas==2.0.3
+gspread==5.10.0
+google-auth==2.23.0
+google-auth-oauthlib==1.0.0
+google-auth-httplib2==0.1.0
+python-dotenv==1.0.0
+openpyxl==3.1.2
+Werkzeug==2.3.7
