--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.8.2",
+    "@reduxjs/toolkit": "^2.0.1",
+    "react-redux": "^9.0.4",
     "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
