fix : fixing up the auto tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -22,7 +22,7 @@ env =
     TESTING=true
     DB_HOST=localhost
     DB_PORT=5432
-    DB_NAME=test_rings_db
+    DB_NAME=test_db
     DB_USER=test_user
     DB_PASSWORD=test_password
 pythonpath = .
