feat: Integrate real database for testing
This commit refactors the testing suite to use a real PostgreSQL database for integration tests, replacing the previous mock-based approach. This provides more realistic and reliable testing of database interactions.

Key changes include:

- Implemented `pytest-postgresql` to manage a temporary, isolated test database for the test suite.
- Created a `db_setup` fixture to handle the creation, schema setup, and teardown of the test database.
- Introduced a `seed_db` fixture to populate the database with consistent test data, ensuring tests run against a known state.
- Refactored integration tests for data, database, report, and search routes to use the live test database instead of mocks.
- Simplified test cases by removing extensive mocking of database connections and cursor objects.
- Updated the application's startup logic to prevent database pool initialization during tests.
- Renamed `test_single_db_connection` to `check_single_db_connection` for improved clarity.
- Unpinned dependencies in `requirements.txt` and `requirements-test.txt` to simplify environment setup.
- Updated `.gitignore` to exclude new development-related files.

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,12 @@ __pycache__
 .coverage
 coverage.xml
 testlog.txt
+
+#UV
+.python-version
+pyproject.toml
+uv.lock
+
+.gemini/
+gha-creds-*.json
+.aider*
