--- a/render.yaml
+++ b/render.yaml
@@ -13,6 +13,13 @@ services:
       - key: FLASK_ENV
         value: production
 
+  - name: ch-frontend
+    type: web
+    runtime: node
+    plan: free
+    buildCommand: npm install && npm run build
+    startCommand: npm start
+
 databases:
   - name: ch-db
     plan: free
