fix: configure frontend API URL for production

--- a/render.yaml
+++ b/render.yaml
@@ -20,6 +20,9 @@ services:
     runtime: static
     buildCommand: npm install && npm run build
     staticPublishPath: ./dist
+    envVars:
+      - key: VITE_API_URL
+        value: https://ch-api.onrender.com
 
 databases:
   - name: ch-db
