--- a/render.yaml
+++ b/render.yaml
@@ -10,7 +10,7 @@ services:
       - key: DATABASE_URL
         fromDatabase:
           name: ch-db
-          property: host
+          property: connectionString
       - key: FLASK_ENV
         value: production
 
