--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     runtime: python
     plan: free
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn run:app
+    startCommand: gunicorn --timeout 1000 run:app
     envVars:
       - key: DB_HOST
         fromDatabase:
