--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "name": "isdata",
+  "description": "Isdata Application",
+  "author": "Flamefusion",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "type": "commonjs",
+  "main": "electron.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "concurrently -k \"npm:dev:vite\" \"npm:dev:electron\"",
+    "dev:vite": "vite",
+    "dev:electron": "wait-on http://localhost:5173 && electron .",
+    "build": "npm run build:react && electron-builder --win",
+    "build:react": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -25,10 +31,35 @@
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
+    "concurrently": "^9.2.1",
+    "electron": "^38.1.2",
+    "electron-builder": "^26.0.12",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "wait-on": "^9.0.1"
+  },
+  
+  "build": {
+    "appId": "com.isdata.app",
+    "productName": "Isdata",
+    "files": [
+      "dist/**/*",
+      "electron.js",
+      "run.py",
+      "app/**/*",
+      "!**/node_modules/fsevents/**"
+    ],
+    "extraResources": [
+      "python-portable/**/*"
+    ],
+    "win": {
+      "target": "nsis"
+    },
+    "directories": {
+      "output": "release"
+    }
   }
 }
