feat: Implement robust Electron packaging and IPC for Python backend
     This commit addresses a series of critical issues encountered while packaging the Electron application with its Python Flask
      backend, ensuring reliable operation in a production environment. The primary goal was to enable seamless communication between
      the React frontend and the Python backend within the packaged Electron app.

     Key problems and their solutions:

     1.  **`fsevents` build error on Linux:**
         *   **Problem:** `electron-builder` failed due to `fsevents` (a macOS-only dependency) being scanned on Linux.
         *   **Solution:** Explicitly excluded `fsevents` from the build by adding `!**/node_modules/fsevents/**` to the `files` array
      in `package.json`.

    2.  **`wine is required` error:**
        *   **Problem:** Building a Windows installer on Linux required Wine for NSIS tools.
        *   **Solution:** User was instructed to install Wine on their Linux system.

    3.  **`spawn ...python.exe ENOENT` (Python backend not found):**
        *   **Problem:** The packaged Electron app could not find the Python executable for the backend. This was due to incorrect
      pathing for Windows and the `.venv` not being properly included/accessed.
        *   **Solution:**
            *   **Portable Python:** Transitioned from a standard virtual environment (`.venv`) to a portable Python distribution.
      User was instructed to set up a `python-portable` directory with necessary dependencies.
            *   **Packaging:** Configured `electron-builder` to include the `python-portable` directory using `extraResources:
      ["python-portable/**/*"]` in `package.json`. This ensures the Python environment is copied outside the `asar` archive.
            *   **Pathing:** Updated `electron.js` to correctly locate the Python executable using `process.resourcesPath` for
      production builds and `__dirname` for development, handling platform-specific execu

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
       "electron.js",
       "run.py",
       "app/**/*",
+      "preload.js",
       "!**/node_modules/fsevents/**"
     ],
     "extraResources": [
