--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Isdata Application",
   "author": "Flamefusion",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "commonjs",
   "main": "electron.js",
   "scripts": {
@@ -18,6 +18,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.9.0",
     "autoprefixer": "^10.4.19",
+    "axios": "^1.12.2",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.542.0",
     "postcss": "^8.4.38",
@@ -41,20 +42,28 @@
     "vite": "^5.2.0",
     "wait-on": "^9.0.1"
   },
-  
   "build": {
     "appId": "com.isdata.app",
     "productName": "Isdata",
     "files": [
       "dist/**/*",
       "electron.js",
-      "run.py",
-      "app/**/*",
       "preload.js",
       "!**/node_modules/fsevents/**"
     ],
     "extraResources": [
-      "python-portable/**/*"
+      {
+        "from": "python-portable",
+        "to": "python-portable"
+      },
+      {
+        "from": "run.py",
+        "to": "run.py"
+      },
+      {
+        "from": "app",
+        "to": "app"
+      }
     ],
     "win": {
       "target": "nsis"
