backend: building a backend.exe
instead of going the route of bundling a minature python env inside electron app as a extra reosurce i am going the route of a standalone exe for backend

my backend the app folder and run.py will be bundled into a exe and i will package that into electron builder.

so for buillding this application completely we need to compile backend.exe then give it in backend folder so electron-builder can pack it inside

--- a/package.json
+++ b/package.json
@@ -53,16 +53,8 @@
     ],
     "extraResources": [
       {
-        "from": "python-portable",
-        "to": "python-portable"
-      },
-      {
-        "from": "run.py",
-        "to": "run.py"
-      },
-      {
-        "from": "app",
-        "to": "app"
+        "from": "backend/backend.exe",
+        "to": "backend.exe"
       }
     ],
     "win": {
