--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "^2.9.0",
     "autoprefixer": "^10.4.19",
     "axios": "^1.12.2",
+    "d3-shape": "^3.2.0",
     "electron-store": "^10.1.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.542.0",
@@ -27,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
+    "recharts": "^3.2.1",
     "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
