--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@reduxjs/toolkit": "^2.9.0",
     "autoprefixer": "^10.4.19",
     "axios": "^1.12.2",
+    "axios-cookiejar-support": "^5.0.2",
+    "tough-cookie": "^4.1.4",
     "d3-shape": "^3.2.0",
     "electron-store": "^10.1.0",
     "framer-motion": "^12.23.12",
